@startuml
'https://plantuml.com/class-diagram

hide empty members



    interface MainView {
        +show(panel: GamePanel)
    }


    interface GamePanel{
    }



    interface Controller{
        +changeScenario()
        +getCurrentScenario() Scenario
    }

class Input << (I, white) >>
Input ..> GamePanel
Ouput <.. MainView
class Ouput << (O, grey) >>

    MainView <-- GamePanel
    MainView <--- Controller
    GamePanel <-- Controller


    interface Character
    interface MapManager
    interface InteractionsManager
    interface ScenarioManager

    Controller <|-- Character
    Controller <|-- MapManager
    Controller <|-- InteractionsManager
    Controller <|-- ScenarioManager

@enduml